Update index.html "Se agrega suscripción y forma de recuperar cuenta"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
 				<button class="button login__submit" type="button" onclick="IngresarDashboard()">
 					<span class="button__text">Ingresar</span>
 					<i class="button__icon fas fa-chevron-right"></i>
-				</button>				
+				</button>
+				<button class="button login__submit" type="button" onclick="IngresarRecoverPassword()">
+					<span class="button__text">¿Ovidaste tu Contraseña?</span>
+					<i class="button__icon fas fa-chevron-right"></i>
+				</button>
+				<button class="button login__submit" type="button" onclick="IngresarRecord()">
+					<span class="button__text">Suscribirse</span>
+					<i class="button__icon fas fa-chevron-right"></i>
+				</button>
+								
 			</form>
 			<div class="social-login">
 				<h3>Ingresa via</h3>
