se agrega demas visuales del proyecto

--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<title>Facilit - Inicio</title>
+		<title>Facilit - Nosotros</title>
 	</head>
 
 	<body>
 
-		<!-- Cabecera- barra de navegación -->
+		<!-- Start Header/Navigation -->
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
@@ -35,13 +35,12 @@
 
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-						<li class="nav-item active">
-							<a class="nav-link" href="dashboard.html">Inicio</a>
-						</li>
+						<li class="nav-item "><a class="nav-link" href="dashboard.html">Inicio</a></li>
 						<li><a class="nav-link" href="shop.html">Tienda</a></li>
-						<li><a class="nav-link" href="about.html">Nosotros</a></li>
+						<li class="active"><a class="nav-link" href="about.html">Nosotros</a></li>
 						<li><a class="nav-link" href="services.html">Servicios</a></li>
 						<li><a class="nav-link" href="contact.html">Contactenos</a></li>
+						
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
@@ -52,17 +51,17 @@
 			</div>
 				
 		</nav>
-		<!-- Final de la sección -->
+		<!-- End Header/Navigation -->
 
-		<!-- Producto principal -->
+		<!-- Start Hero Section -->
 			<div class="hero">
 				<div class="container">
 					<div class="row justify-content-between">
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
-								<h1>Computadores<span clsas="d-block"> A Tu Alcance</span></h1>
-								<p class="mb-4">Descubre nuestra amplia gama de equipos, con las últimas innovaciones, precios competitivos y un servicio técnico confiable que te acompañará en cada paso del camino.</p>
-								<p><a href="" class="btn btn-secondary me-2">Compra ahora</a><a href="#" class="btn btn-white-outline">Explorar</a></p>
+								<h1>Nosotros</h1>
+								<p class="mb-4">En FacilIT, somos apasionados por la tecnología y su capacidad para transformar vidas. Fundada en 2004, nuestra misión es ofrecer productos innovadores que no solo satisfacen las necesidades tecnológicas de nuestros clientes, sino que también mejoran su calidad de vida.</p>
+								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -73,110 +72,62 @@
 					</div>
 				</div>
 			</div>
-		<!-- Final de la sección -->
+		<!-- End Hero Section -->
 
-		<!-- Productos -->
-		<div class="product-section">
-			<div class="container">
-				<div class="row">
+		
 
-					<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-						<h2 class="mb-4 section-title">Licenciamiento de la mejor calidad</h2>
-						<p class="mb-4">El licenciamiento de software en tu computador es clave para tu seguridad y rendimiento. Con una licencia original, aseguras que tu equipo esté protegido, reciba actualizaciones y tenga acceso al soporte técnico oficial. ¡Evita problemas y disfruta de una experiencia confiable y sin riesgos! </p>
-						<p><a href="#" class="btn">Explorar</a></p>
-					</div> 
-
-					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
-							<img src="images/kaspersky.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Antivirus Kaspersky</h3>
-							<strong class="product-price">$50.00</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div> 
-
-					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
-							<img src="images/office.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Office 365</h3>
-							<strong class="product-price">$78.00</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-
-					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
-							<img src="images/adobe.png" class="img-fluid product-thumbnail">
-							<h3 class="product-title">Adobe</h3>
-							<strong class="product-price">$43.00</strong>
-
-							<span class="icon-cross">
-								<img src="images/cross.svg" class="img-fluid">
-							</span>
-						</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<!-- Final de la sección -->
-
-		<!-- Porque elegirnos -->
+		<!-- Start Why Choose Us Section -->
 		<div class="why-choose-section">
 			<div class="container">
-				<div class="row justify-content-between">
+				<div class="row justify-content-between align-items-center">
 					<div class="col-lg-6">
 						<h2 class="section-title">¿Porqué elegirnos?</h2>
-						<p>Nos especializamos en una amplia gama de productos tecnológicos, desde dispositivos móviles hasta soluciones para el hogar inteligente. Creemos en la importancia de proporcionar opciones accesibles y sostenibles, por lo que trabajamos arduamente para seleccionar productos reacondicionados y eco-amigables. Nuestro equipo está compuesto por expertos en tecnología que están siempre dispuestos a ayudar a nuestros clientes a encontrar el producto perfecto que se adapte a sus necesidades. En FacilIT, no solo vendemos tecnología; creamos experiencias que conectan a las personas con lo que realmente importa. ¡Únete a nosotros en este emocionante viaje tecnológico!</p>
+						<p>Nos especializamos en una amplia gama de productos tecnológicos, desde dispositivos móviles hasta soluciones para el hogar inteligente. Creemos en la importancia de proporcionar opciones accesibles y sostenibles, por lo que trabajamos arduamente para seleccionar productos reacondicionados y eco-amigables.
+							Nuestro equipo está compuesto por expertos en tecnología que están siempre dispuestos a ayudar a nuestros clientes a encontrar el producto perfecto que se adapte a sus necesidades. En FacilIT, no solo vendemos tecnología; creamos experiencias que conectan a las personas con lo que realmente importa.
+							¡Únete a nosotros en este emocionante viaje tecnológico!</p>
 
-						<div class="row my-5">
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/truck.svg" alt="Image" class="imf-fluid">
+							<div class="row my-5">
+								<div class="col-6 col-md-6">
+									<div class="feature">
+										<div class="icon">
+											<img src="images/truck.svg" alt="Image" class="imf-fluid">
+										</div>
+										<h3>Equipos de última generación</h3>
+										<p>Tenemos equipos con el mejor rendimiento, diseñados para cada necesidad, desde el hogar hasta proyectos empresariales.</p>
 									</div>
-									<h3>Equipos de última generación</h3>
-									<p>Tenemos equipos con el mejor rendimiento, diseñados para cada necesidad, desde el hogar hasta proyectos empresariales.</p>
 								</div>
-							</div>
-
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/bag.svg" alt="Image" class="imf-fluid">
+	
+								<div class="col-6 col-md-6">
+									<div class="feature">
+										<div class="icon">
+											<img src="images/bag.svg" alt="Image" class="imf-fluid">
+										</div>
+										<h3>Licencias 100% originales</h3>
+										<p>Garantizamos seguridad,actualizaciones y soporte técnico.</p>
 									</div>
-									<h3>Licencias 100% originales</h3>
-									<p>Garantizamos seguridad,actualizaciones y soporte técnico.</p>
 								</div>
-							</div>
-
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/support.svg" alt="Image" class="imf-fluid">
+	
+								<div class="col-6 col-md-6">
+									<div class="feature">
+										<div class="icon">
+											<img src="images/support.svg" alt="Image" class="imf-fluid">
+										</div>
+										<h3>Asesoría personalizada</h3>
+										<p>Te ayudamos para que encuentres justo lo que necesitas, sin pagar de más.</p>
 									</div>
-									<h3>Asesoría personalizada</h3>
-									<p>Te ayudamos para que encuentres justo lo que necesitas, sin pagar de más.</p>
 								</div>
-							</div>
-
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/return.svg" alt="Image" class="imf-fluid">
+	
+								<div class="col-6 col-md-6">
+									<div class="feature">
+										<div class="icon">
+											<img src="images/return.svg" alt="Image" class="imf-fluid">
+										</div>
+										<h3>Precios competitivos</h3>
+										<p>Te ofrecemos precios asequibles sin comprometer la calidad de nuestros productos</p>
 									</div>
-									<h3>Precios competitivos</h3>
-									<p>Te ofrecemos precios asequibles sin comprometer la calidad de nuestros productos</p>
 								</div>
+	
 							</div>
-
-						</div>
 					</div>
 
 					<div class="col-lg-5">
@@ -188,7 +139,9 @@
 				</div>
 			</div>
 		</div>
-		<!-- Final de la sección-->
+		<!-- End Why Choose Us Section -->
+
+		
 
 		<!-- Reseñas -->
 		<div class="testimonial-section">
@@ -284,6 +237,8 @@
 			</div>
 		</div>
 		<!-- Final de la sección-->
+
+		
 
 		<!-- Pie de página -->
 		<footer class="footer-section">
@@ -388,7 +343,7 @@
 
 			</div>
 		</footer>
-		<!-- Final de la sección -->	
+		<!-- Final de la sección -->
 
 
 		<script src="js/bootstrap.bundle.min.js"></script>
